@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-30T08:21:55Z",
-  "count_outdated" : 300,
-  "uniques_outdated" : 164,
-  "count" : 328,
+  "timestamp" : "2022-05-30T16:22:10Z",
+  "count_outdated" : 302,
+  "uniques_outdated" : 166,
+  "count" : 329,
   "uniques" : 185,
   "clones" : [
-    {
-      "timestamp": "2022-05-16T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
     {
       "timestamp": "2022-05-17T00:00:00Z",
       "count": 1,
@@ -70,8 +63,8 @@
     },
     {
       "timestamp": "2022-05-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
