@@ -1,12 +1,7 @@
 {
-  "count": 28,
+  "count": 27,
   "uniques": 12,
   "clones": [
-    {
-      "timestamp": "2022-05-16T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-05-17T00:00:00Z",
       "count": 1,
@@ -49,7 +44,7 @@
     },
     {
       "timestamp": "2022-05-30T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
