@@ -1,3 +1,10 @@
+2022-05-30T16:22:10Z:
+* notice: last 14d: unq all: 12 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 164 300 / 185 328
+* notice: next accum: outdated-unq outdated-all / unq all: 166 302 / 185 329
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: changed dates: [2022-05-30]
+
 2022-05-30T08:21:55Z:
 * notice: last 14d: unq all: 12 28
 * notice: prev accum: outdated-unq outdated-all / unq all: 164 300 / 184 327
